--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -1,8 +1,8 @@
 /* Montserrat */
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 /* Caveat */
-@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
 
 :root {
   --main: #de1c1c;
@@ -14,7 +14,7 @@
 
 body {
   margin: 0;
-  font-family: 'Montserrat' !important;
+  font-family: "Montserrat" !important;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   overflow-x: hidden;
@@ -24,18 +24,18 @@ body {
 
 ::-webkit-scrollbar {
   width: 5px;
-  background-color: black;
+  background: red;
 }
 
 ::-webkit-scrollbar-thumb {
   width: 5px;
-  background: var(--red);
+  background: black;
   border-radius: 0px;
 }
 
 a {
   color: var(--main) !important;
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   text-decoration: none;
 }
 
@@ -80,25 +80,26 @@ a {
 }
 
 ::placeholder {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   color: var(--secondary);
   letter-spacing: 1.8;
 }
 
-body, #root, .App, header {
+body,
+#root,
+.App,
+header {
   width: 100% !important;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 /* iPhone SE */
 @media only screen and (max-width: 480px) {
-
   body {
-      width: 100vw;
+    width: 100vw;
   }
-
 }
