--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -1,7 +1,40 @@
 header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
   background: black;
   color: white;
   font-family: montserrat;
   padding: 1em 0;
+}
+
+header .inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 90%;
+}
+
+header .inner .logo {
+  max-width: 185px;
+  height: auto;
+}
+
+header .inner .avatar {
+  max-width: 185px;
+  height: auto;
 }
 /*# sourceMappingURL=header.css.map */
