--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -11,7 +11,7 @@
     display: flex;
     grid-gap: 1em;
     overflow-x: scroll;
-    img.movie {
+    .movie {
       object-fit: contain;
       width: 100%;
       max-height: 250px;
@@ -20,6 +20,10 @@
         cursor: pointer;
         transform: scale(1.08);
       }
+    }
+    .skeleton {
+      background: silver !important;
+      color: white !important;
     }
   }
 }
