--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -25,7 +25,7 @@ header .inner {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 90%;
+  width: 96%;
 }
 
 header .inner .logo {
@@ -33,8 +33,14 @@ header .inner .logo {
   height: auto;
 }
 
+@media (max-width: 992px) {
+  header .inner .logo {
+    max-width: 140px;
+  }
+}
+
 header .inner .avatar {
-  max-width: 185px;
-  height: auto;
+  max-height: 50px;
+  width: auto;
 }
 /*# sourceMappingURL=header.css.map */
