--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -34,7 +34,61 @@
 }
 
 .row .movieRow .skeleton {
-  background: silver !important;
-  color: white !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  min-height: 250px;
+  min-width: 165px;
+  width: 100%;
+  color: white;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+  -webkit-animation: skeleton 1s ease-in-out infinite alternate;
+          animation: skeleton 1s ease-in-out infinite alternate;
+}
+
+.row .movieRow .skeleton .icon {
+  height: 50px;
+  width: auto;
+}
+
+@-webkit-keyframes skeleton {
+  0% {
+    background: silver;
+    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
+            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
+  }
+  70% {
+    -webkit-box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
+            box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    background: gray;
+    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+  }
+}
+
+@keyframes skeleton {
+  0% {
+    background: silver;
+    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
+            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
+  }
+  70% {
+    -webkit-box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
+            box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    background: gray;
+    -webkit-box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+            box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
+  }
 }
 /*# sourceMappingURL=row.css.map */
