--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -22,8 +22,33 @@
       }
     }
     .skeleton {
-      background: silver !important;
-      color: white !important;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 250px;
+      min-width: 165px;
+      width: 100%;
+      color: white;
+      transition: 0.5s ease-in-out;
+      animation: skeleton 1s ease-in-out infinite alternate;
+      .icon {
+        height: 50px;
+        width: auto;
+      }
     }
+  }
+}
+
+@keyframes skeleton {
+  0% {
+    background: silver;
+    box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
+  }
+  70% {
+    box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
+  }
+  100% {
+    background: gray;
+    box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
