--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -2,12 +2,13 @@
   background: black;
   color: white !important;
   font-family: montserrat;
-  padding: 1em;
+  padding: 1em 1em 1em 5em;
 }
 
 .row h2 {
   text-align: left;
   font-weight: 500;
+  font-size: 1.3em;
 }
 
 .row .movieRow {
@@ -16,6 +17,7 @@
   display: flex;
   grid-gap: 1em;
   overflow-x: scroll;
+  overflow-y: hidden;
 }
 
 .row .movieRow span {
