--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -2,17 +2,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 /* Caveat */
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap");
-* {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-}
-
 :root {
-  --main: #de1c1c;
+  --piratechs: #2b4261;
+  --main: #ff1c0b;
+  --junior: #09589c;
+  --fullStack: #ff1c0b;
   --silver: #c5c5c5;
   --secondary: #3c3c3c;
   --transition: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   --bg: black;
+}
+
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 iframe {
