--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -12,10 +12,8 @@ header {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  background: -webkit-gradient(linear, left top, left bottom, from(var(--secondary)), to(transparent));
-  background: linear-gradient(var(--secondary), transparent);
-  -webkit-backdrop-filter: blur(2px);
-          backdrop-filter: blur(2px);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(30%, black), to(transparent));
+  background: linear-gradient(black 30%, transparent);
   color: white;
   font-family: montserrat;
   padding: 1.5em 0;
@@ -128,6 +126,8 @@ header .inner .dropdown:hover .caret i {
 }
 
 .scrolledHeader {
-  background: rgba(0, 0, 0, 0.6);
+  background: var(--blackGlass);
+  -webkit-backdrop-filter: blur(5px);
+          backdrop-filter: blur(5px);
 }
 /*# sourceMappingURL=header.css.map */
