--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -6,8 +6,7 @@ header {
   justify-content: center;
   align-items: center;
   width: 100%;
-  background: linear-gradient(var(--secondary), transparent);
-  backdrop-filter: blur(2px);
+  background: linear-gradient(black 30%, transparent);
   color: white;
   font-family: montserrat;
   padding: 1.5em 0;
@@ -80,5 +79,6 @@ header {
 }
 
 .scrolledHeader {
-  background: rgba(0, 0, 0, 0.6);
+  background: var(--blackGlass);
+  backdrop-filter: blur(5px);
 }
