--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -10,7 +10,8 @@
   --silver: #c5c5c5;
   --secondary: #3c3c3c;
   --transition: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
-  --bg: black;
+  --bg: #1f1f1f;
+  --blackGlass: rgba(0, 0, 0, 0.6);
 }
 
 * {
@@ -33,7 +34,7 @@ body {
 }
 
 main {
-  padding-top: 5em;
+  padding-top: 3em;
 }
 
 ::-webkit-scrollbar {
