--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -10,15 +10,23 @@
   position: relative;
   justify-content: center;
   align-items: center;
+  // animation: backgroundMove 1s ease-in-out infinite alternate !important;
   .innerBanner {
     display: flex;
     flex-direction: column;
     width: 85%;
     text-align: left;
-    h1,
+    h1 {
+      font-weight: 700;
+      width: 30%;
+      letter-spacing: 1.8;
+      font-size: 3em;
+      margin-bottom: 0.2em;
+    }
     p {
-      width: 35%;
-      text-shadow: 0 1px 2px black;
+      font-weight: 500;
+      width: 30%;
+      // text-shadow: 0 1px 2px black;
     }
     .bannerButtons {
       display: flex;
@@ -27,18 +35,31 @@
         cursor: pointer;
         border: none;
         outline: none;
-        color: white;
-        font-weight: 700;
-        font-size: 1.1em;
-        border-radius: 0.2vw;
+        font-weight: 500;
+        border-radius: 0.3vw;
         padding: 0.5rem 2rem 0.5rem 2rem;
-        background: var(--bg);
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        grid-gap: 0.5em;
+        font-size: 1.5em;
+        color: black;
+        background: #f2f2f2;
         transition: var(--transition);
         &:hover {
-          color: black;
-          background: var(--silver);
+          color: white;
+          background: var(--bg);
         }
       }
     }
+  }
+}
+
+@keyframes backgroundMove {
+  0% {
+    background-position: 45% center !important;
+  }
+  100% {
+    background-position: 75% center !important;
   }
 }
