--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -13,7 +13,8 @@
   --secondary: #3c3c3c;
   --transition: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   --bg: #1f1f1f;
-  --blackGlass: rgba(0, 0, 0, 0.6);
+  // --blackGlass: rgba(0, 0, 0, 0.6);
+  --blackGlass: rgba(0, 0, 0, 0.75);
 }
 
 * {
