--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -13,19 +13,79 @@
     grid-gap: 1em;
     overflow-x: scroll;
     overflow-y: hidden;
+    &::-webkit-scrollbar {
+      display: flex;
+      // display: none;
+    }
     span {
       width: 100%;
     }
     .movie {
       object-fit: cover;
-      width: 165px;
-      min-height: 250px;
-      max-height: 250px;
       animation: skeleton 1s ease-in-out infinite alternate;
       transition: 0.5s ease-in-out !important;
+      position: relative;
+      max-height: 250px;
+      .overlay {
+        opacity: 0;
+        padding: 1.5em;
+        z-index: 1;
+        font-size: 0.75em;
+        max-height: 250px;
+        overflow: hidden;
+        object-fit: contain;
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        text-align: left !important;
+        background: var(--blackGlass);
+        backdrop-filter: blur(5px);
+        transition: var(--transition);
+        .titleData {
+          display: flex;
+          width: 100%;
+          justify-content: space-between;
+          align-items: center;
+          grid-gap: 0.5em;
+          .data {
+            display: flex;
+            width: 100%;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: flex-end;
+            text-align: right;
+            span {
+              display: flex;
+              grid-gap: 0.5em;
+              align-items: center;
+              justify-content: flex-end;
+              text-align: right;
+              font-size: 0.85em;
+              i {
+                font-size: 0.8em;
+                color: var(--main);
+              }
+            }
+          }
+        }
+        h2 {
+          text-align: left;
+          width: 100%;
+          font-size: 1.2em;
+        }
+      }
       &:hover {
         cursor: pointer;
         transform: scale(1.08);
+        .overlay {
+          opacity: 1;
+        }
       }
     }
     .skeleton {
