--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -5,28 +5,58 @@
   font-family: "Montserrat" !important;
   display: flex;
   width: 100%;
-  height: 450px;
+  height: 600px;
   object-fit: contain;
   position: relative;
   justify-content: center;
   align-items: center;
+  text-shadow: 0 1px 2px black;
   // animation: backgroundMove 1s ease-in-out infinite alternate !important;
   .innerBanner {
     display: flex;
     flex-direction: column;
     width: 85%;
     text-align: left;
+    .titleData {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      align-items: flex-start;
+      flex-direction: column;
+      grid-gap: 0.5em;
+      .data {
+        display: flex;
+        width: 100%;
+        justify-content: flex-start;
+        align-items: flex-start;
+        text-align: right;
+        grid-gap: 1em;
+        padding-bottom: 1em;
+        span {
+          display: flex;
+          flex-direction: row-reverse;
+          grid-gap: 0.5em;
+          align-items: center;
+          justify-content: flex-end;
+          text-align: right;
+          font-size: 1.5em;
+          i {
+            font-size: 0.8em;
+            color: var(--main);
+          }
+        }
+      }
+    }
     h1 {
       font-weight: 700;
-      width: 30%;
+      width: 43%;
       letter-spacing: 1.8;
       font-size: 3em;
       margin-bottom: 0.2em;
     }
     p {
       font-weight: 500;
-      width: 30%;
-      // text-shadow: 0 1px 2px black;
+      width: 43%;
     }
     .bannerButtons {
       display: flex;
