--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -5,18 +5,23 @@
   font-family: "Montserrat" !important;
   display: flex;
   width: 100%;
-  height: 600px;
+  height: 500px;
   object-fit: contain;
   position: relative;
   justify-content: center;
   align-items: center;
   text-shadow: 0 1px 2px black;
-  // animation: backgroundMove 1s ease-in-out infinite alternate !important;
+  animation: backgroundMove 1s ease-in-out infinite alternate !important;
+  transition: var(--transition);
+  @media (max-width: 1366px) {
+    height: 600px;
+  }
   .innerBanner {
     display: flex;
     flex-direction: column;
     width: 85%;
     text-align: left;
+    grid-gap: 1em;
     .titleData {
       display: flex;
       width: 100%;
@@ -39,7 +44,7 @@
           align-items: center;
           justify-content: flex-end;
           text-align: right;
-          font-size: 1.5em;
+          font-size: 1.2em;
           i {
             font-size: 0.8em;
             color: var(--main);
@@ -72,7 +77,7 @@
         justify-content: center;
         align-items: center;
         grid-gap: 0.5em;
-        font-size: 1.5em;
+        font-size: 1em;
         color: black;
         background: #f2f2f2;
         transition: var(--transition);
