--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -60,6 +60,7 @@ header {
         border-radius: 5px;
         margin-left: 20px;
         width: auto;
+        filter: hue-rotate(180deg);
       }
       .caret {
         display: flex;
