--- a/src/components/Row/styles/row.scss
+++ b/src/components/Row/styles/row.scss
@@ -14,8 +14,8 @@
     overflow-x: scroll;
     overflow-y: hidden;
     &::-webkit-scrollbar {
-      display: flex;
-      // display: none;
+      // display: flex;
+      display: none;
     }
     span {
       width: 100%;
@@ -26,14 +26,13 @@
       transition: 0.5s ease-in-out !important;
       position: relative;
       max-height: 250px;
+      object-fit: cover;
       .overlay {
         opacity: 0;
         padding: 1.5em;
         z-index: 1;
         font-size: 0.75em;
-        max-height: 250px;
         overflow: hidden;
-        object-fit: contain;
         position: absolute;
         top: 0;
         left: 0;
@@ -92,12 +91,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      min-height: 245px;
-      min-width: 165px;
+      max-height: 250px;
       width: 100%;
       color: white;
       transition: 0.5s ease-in-out;
-      animation: skeleton 1s ease-in-out infinite alternate;
+      animation: skeleton 1s ease-in-out;
       .icon {
         height: 50px;
         width: auto;
@@ -108,14 +106,14 @@
 
 @keyframes skeleton {
   0% {
-    background: silver;
+    background: var(--secondary);
     box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0.3);
   }
   70% {
     box-shadow: inset 0 0 0 10px rgba(255, 255, 255, 0);
   }
   100% {
-    background: gray;
+    background: var(--bg);
     box-shadow: inset 0 0 0 0 rgba(255, 255, 255, 0);
   }
 }
