--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -39,7 +39,8 @@ body {
 }
 
 main {
-  padding-top: 3em;
+  margin-top: 0em;
+  z-index: 15;
 }
 
 // Modals
@@ -57,7 +58,36 @@ div[role="presentation"] {
   }
 }
 
+.hoverLink {
+  display: flex;
+  grid-gap: 0.3em;
+  align-items: center;
+  position: relative;
+  transition: var(--transition);
+  &::before {
+    content: "";
+    background: var(--main);
+    position: absolute;
+    width: 100%;
+    height: 1px;
+    display: block;
+    bottom: -3px;
+    right: 0;
+    z-index: -100;
+    transform-origin: 0% 100%;
+    transform: scale(0, 1);
+    transition: var(--transition);
+  }
+  &:hover {
+    &::before {
+      transform: scale(1, 1);
+      transition: 500ms ease-in-out;
+    }
+  }
+}
+
 ::-webkit-scrollbar {
+  display: none;
   height: 10px;
   background: rgb(31, 31, 31);
 }
