--- a/src/components/Footer/styles/footer.scss
+++ b/src/components/Footer/styles/footer.scss
@@ -4,7 +4,7 @@
   text-transform: uppercase;
 }
 
-footer {
+.footer {
   background: black;
   color: var(--silver);
   font-family: "Montserrat" !important;
