--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -6,7 +6,6 @@
   background: black;
   color: var(--silver);
   font-family: "Montserrat" !important;
-  margin-top: 2em;
   height: 40px;
   -webkit-backdrop-filter: blur(8px);
           backdrop-filter: blur(8px);
@@ -63,10 +62,18 @@
   max-height: 19px;
   -o-object-fit: contain;
      object-fit: contain;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
 .footer a svg path {
   fill: var(--silver);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.footer a svg:hover path {
+  fill: var(--secondary);
 }
 
 footer i,
