--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -23,11 +23,19 @@ header {
         padding: 0;
         display: flex;
         align-items: center;
+        .authButton {
+          background: var(--main);
+          color: white !important;
+          font-family: "montserrat";
+          transition: var(--transition);
+          &:hover {
+            background: var(--secondary);
+          }
+        }
         li {
           list-style: none;
           margin-left: 20px;
           text-decoration: none;
-          cursor: pointer;
           font-family: "Montserrat";
           color: #f2f2f2;
           transition: 0.3s ease-in-out !important;
