--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -36,6 +36,28 @@ body {
   overflow-x: hidden;
   background: black;
   min-height: 100vh;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+  -webkit-animation: fadeIn 1000ms ease-in-out;
+          animation: fadeIn 1000ms ease-in-out;
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 main {
