--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -37,6 +37,17 @@ body {
   overflow-x: hidden;
   background: black;
   min-height: 100vh;
+  transition: var(--transition);
+  animation: fadeIn 1000ms ease-in-out;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 main {
