--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -37,7 +37,7 @@ body {
   overflow-x: hidden;
   background: black;
   min-height: 100vh;
-  transition: var(--transition);
+  // transition: var(--transition);
   animation: fadeIn 1000ms ease-in-out;
 }
 
